[package]
name = "tda-sdk"
version = "0.1.3"
authors = ["Ron Rider Jr. <rideron89@gmail.com>"]
description = "SDK for interacting with the TD Ameritrade API."
license = "MIT"
readme = "README.md"
repository = "https://github.com/rideron89/tda-sdk-rs"
homepage = "https://github.com/rideron89/tda-sdk-rs"
documentation = "https://docs.rs/tda-sdk/latest/tda_sdk/"
categories = ["api-bindings"]
edition = "2018"

# Files to include in the upload to crates.io.
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[dependencies]
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
ureq = { version = "1.1", features = ["json"] }

[dev-dependencies]
dotenv = "0.15"
